[metadata]
name = ps3
description = Course material for Fundamentals of Data Science (Michaelmas 2024) at University of Cambridge
long_description = file: README.md
long_description_content_type = text/markdown
author = Adrian Ochs, Christian Roerig
author_email = adrian.ochs@gmail.com, christianroerig2391@gmail.com


[options]
include_package_data = true
install_requires =
python_requires = >=3.8
packages = find:


[options.packages.find]
include =
    ps3

[options.entry_points]
console_scripts =
